--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "blist-hugo-theme"]
-	path = blist-hugo-theme
+	path = themes/blist-hugo-theme
 	url = https://github.com/apvarun/blist-hugo-theme
+
